<?xml version="1.0" encoding="utf-8"?>
<resources>
    
<string name="app_name">FitMaestro</string>
<string name="start_program">Start Program</string>
<string name="sessions">Sessions</string>
<string name="sets">Workouts</string>
<string name="programs">Programs</string>
<string name="exercises">Exercises</string>
<string name="statistics">Stats</string>
<string name="excercise_log">Excercise Log</string>
<string name="download_programs">Download Programs</string>
<string name="download_excercises">Download Excercises</string>
<string name="by_category">By Category</string>
<string name="by_rating">By rating</string>
<string name="by_group">By Group</string>
<string name="select_program">Select Program</string>
<string name="select_day">Select Day</string>
<string name="done">Done</string>
<string name="weight">Weight</string>
<string name="name">Name</string>
<string name="type">Type</string>
<string name="description">Description</string>
<string name="group">Group</string>
<string name="save">Save</string>
<string name="max_reps">Max Reps</string>
<string name="max_weight">Max Weight</string>
<string name="add_group">Add Group</string>
<string name="add_excercise">Add Excercise</string>
<string name="select_set">Select Workout</string>
<string name="select_group">Select Group</string>
<string name="delete_group">Delete Group</string>
<string name="with_weight">With Weight</string>
<string name="own_weight">Own Weight</string>
<string name="add_set">Add Workout</string>
<string name="delete_set">Delete Workout</string>
<string name="delete_exercise">Delete Exercise</string>
<string name="edit_exercise">Edit Exercise</string>
<string name="edit_group">Edit Group</string>
<string name="exercise_deleted">Exercise Deleted</string>
<string name="group_deleted">Group Deleted</string>
<string name="exercise_edited">Exercise Edited</string>
<string name="group_edited">Group Edited</string>
<string name="edit_set">Edit Workout</string>
<string name="set_edited">Workout Edited</string>
<string name="add_remove_excercises">Add/Remove Exercises</string>
<string name="add_exercise_to_set">Add Exercise To Workout</string>
<string name="remove_from_set">Remove From Workout</string>
<string name="exercise_removed_from_set">Exercise Removed From Workout</string>
<string name="add_entry">Add Entry</string>
<string name="log_entry_edited">Log Entry Edited</string>
<string name="edit_log_entry">Edit Log Entry</string>
<string name="delete_log_entry">Delete Log Entry</string>
<string name="time_row">Time: </string>
<string name="times_row">Times: </string>
<string name="weight_row">Weight: </string>
<string name="kg">kg</string>
<string name="by_set">By Workout</string>
<string name="by_exercise">By Exercise</string>
<string name="or">OR</string>
<string name="email">Email:</string>
<string name="password">Password:</string>
<string name="repeatpassword">Repeat Password:</string>
<string name="register">Register!</string>
<string name="login">Login</string>
<string name="password_missmatch">Passwords Do Not Match</string>
<string name="email_invalid">Email is invalid</string>
<string name="account_created">Account Created</string>
<string name="email_registered">This email is already registered</string>
<string name="no_connection">Server connection problem</string>
<string name="login_success">You\'ve logged in succesfully!</string>
<string name="invalid_credentials">Invalid credentials!</string>
<string name="synchronize">Synchronization</string>
<string name="reps">Reps</string>
<string name="reps_small">reps</string>
<string name="percentage">Percentage</string>
<string name="reps_entry_edited">Reps entry edited</string>
<string name="edit_reps_entry">Edit reps</string>
<string name="delete_reps_entry">Delete reps</string>
<string name="add_program">Add program</string>
<string name="delete_program">Delete program</string>
<string name="program_edited">Program edited</string>
<string name="edit_program">Edit program</string>
<string name="plan_added">Workout Plan added</string>
<string name="plan_removed">Workout Plan Removed</string>
<string name="add_session">Add session</string>
<string name="add_exercise_to_session">Add Exercise to session</string>
<string name="remove_from_session">Remove from session</string>
<string name="exercise_removed_from_session">Exercise removed from session</string>
<string name="session_edited">Session Edited</string>
<string name="edit_session">Edit Session</string>
<string name="delete_session">Delete Session</string>
<string name="session_reps_entry_edited">Session Reps Entry edited</string>
<string name="edit_session_reps_entry">Edit Session Reps Entry</string>
<string name="delete_session_reps_entry">Delete Session Reps Entry</string>
<string name="start_session">Start Session</string>
<string name="cancel">Cancel</string>
<string name="mon">Mon</string>
<string name="tue">Tue</string>
<string name="wed">Wed</string>
<string name="thu">Thu</string>
<string name="fri">Fri</string>
<string name="sat">Sat</string>
<string name="sun">Sun</string>
<string name="synchronization_finished">Synchronization Finished</string>
<string name="synchronization_failed">Synchronization Failed</string>
<string name="synchronizing">Synchronizing...</string>
<string name="stop">Stop</string>
<string name="counter_title">Rest time</string>
<string name="units">Units</string>
<string name="add_measurement">Add measurement</string>
<string name="measurement_edited">Measurement edited</string>
<string name="edit_measurement">Edit Measurement</string>
<string name="delete_measurement">Delete Measurement</string>
<string name="measurements">Measurements</string>
<string name="value">Value</string>
<string name="edit_measurement_value">Edit Measurement Value</string>
<string name="in_progress">In Progress</string>
<string name="set_inprogress">Mark as \"In Progress\"</string>
<string name="set_done">Mark as \"Done\"</string>
<string name="tab_inprogress">In Progress</string>
<string name="tab_done">Done</string>
<string name="exercising">Exercising</string>
<string name="fitmaestro">Fitmaestro.com</string>
<string name="fetching">Please wait, fetching...</string>
<string name="import_exercises">Import exercises</string>
<string name="importing_exercises">Importing exercises</string>
<string name="exercises_imported">Exercises imported</string>
<string name="import_programs">Import programs</string>
<string name="importing_programs">Importing programs</string>
<string name="programs_imported">Programs imported</string>
<string name="sync_message">Synchronization will update your data on the site and on the phone depending which data you edited/added last.</string>
<string name="start_synchronization">Start Synchronization</string>
<string name="remove_from_program">Remove Workout</string>
<string name="add_week">Add week</string>
<string name="create">Create</string>
<string name="create_workout">Create workout for this day?</string>
<string name="edit_workout">Edit workout</string>
<string name="change">Change</string>
<string name="exercise">Exercise:</string>
<string name="start_date">Start date:</string>
<string name="end_date">End date:</string>
<string name="statistics_type">Statistics type:</string>
<string name="get_stats">Get statistics!</string>
<string name="max_value">Max value:</string>
<string name="sum">Sum:</string>
<string name="stats_type_description">Please select values you want your chart to be created with:</string>
<string name="type_max_value">By max values</string>
<string name="type_sum">By sums</string>
<string name="type_max_value_desc">Create chart using max values for the exercise for each workout session</string>
<string name="type_sum_desc">Create chart using sums of total workout for each session.</string>
<string name="get_chart">Get Chart</string>
<string name="choose_stats_title">Choose chart values</string>
<string name="view_stats">View exercise stats</string>
<string name="reps_table">reps</string>
<string name="planned_reps_table">pl. reps</string>
<string name="planned_weight_table">pl. weight</string>
<string name="weight_table">weight</string>
<string name="percentage_table">percentage</string>
<string name="none_selected">None selected</string>
<string name="no_session_reps">No reps entered yet!</string>
<string name="no_reps">No reps entered yet!</string>
<string name="no_programs_avail">No programs available</string>
<string name="no_entries_for_meas">No entries for this measurement yet!</string>
<string name="no_measurements">No measurements entered yet!</string>
<string name="no_programs">No programs entered yet!</string>
<string name="no_sessions">No sessions started yet!</string>
<string name="no_exercises">No exercises for this session yet!</string>
<string name="no_exercises_for_workout">No exercises for this workout yet!</string>
<string name="no_sets">No workouts entered yet!</string>
<string name="no_stats">No stats for this period!</string>
<string name="units_category">Units</string>
<string name="weight_units">Select weight units</string>
<string name="weight_units_title">Weight units</string>
<string name="weight_units_desc">Select weight units to use</string>
<string name="settings">Settings</string>
<string name="session_title">Session Title:</string>
<string name="session_title_caption">Session Title</string>
<string name="started_from_workout">Started from workout plan</string>
<string name="start">Start</string>
<string name="default_unit">lb</string>
<string name="step_category">Weight calculation step</string>
<string name="select_step">Select step</string>
<string name="step_title">Calculation step</string>
<string name="step_desc">Select weight multiplicator for calculating weight.</string>
<string name="default_step">0.5</string>
<string name="details">Details</string>
<string name="add_exercise">Add exercise</string>
<string name="add">Add</string>

<dimen name="numeric_width">100dip</dimen>
<color name="tables_header">#0000ff</color>
</resources>
