<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/LinearLayoutAE"
	android:orientation="vertical" 
	android:layout_width="fill_parent" 
	android:layout_height="fill_parent" 
	xmlns:android="http://schemas.android.com/apk/res/android">
<TextView android:text="@string/name" android:id="@+id/TextView01" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
<EditText android:text="" android:id="@+id/edit_name" android:layout_width="wrap_content" android:layout_height="wrap_content"></EditText>
<TextView android:text="@string/type" android:id="@+id/text_type" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
	<ToggleButton 
		android:text="" android:id="@+id/toggle_type" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:textOn = "@string/with_weight"
		android:textOff = "@string/own_weight" android:checked = "true" />
<TextView android:text="@string/description" android:id="@+id/text_description" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
<EditText android:text="" android:id="@+id/edit_description" android:layout_width="wrap_content" android:layout_height="wrap_content"></EditText>
<TextView android:text="@string/group" android:id="@+id/text_group" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
<Spinner android:id="@+id/spinner_group" android:layout_width="wrap_content" android:layout_height="wrap_content"></Spinner>

<Button android:text="@string/save" android:id="@+id/button_save" android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>

</LinearLayout>