<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical" 
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
<TextView android:text="@string/email" android:id="@+id/TextView01" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
<EditText android:text="" android:id="@+id/edit_email" android:inputType ="textEmailAddress" android:layout_width="fill_parent" android:layout_height="wrap_content"></EditText>
<TextView android:text="@string/password" android:id="@+id/TextView02" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
<EditText android:text="" android:id="@+id/edit_password" android:layout_width="fill_parent" android:layout_height="wrap_content" android:password="true"></EditText>
<TextView android:text="@string/repeatpassword" android:id="@+id/TextView03" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
<EditText android:text="" android:id="@+id/edit_repeatpassword" android:layout_width="fill_parent" android:layout_height="wrap_content" android:password="true"></EditText>
<Button android:text="@string/register" android:id="@+id/button_register" android:layout_width="fill_parent" android:layout_height="wrap_content"></Button>
</LinearLayout>
