<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/LinearLayoutAD"
	android:orientation="vertical" 
	android:layout_width="fill_parent" 
	android:layout_height="fill_parent" 
	xmlns:android="http://schemas.android.com/apk/res/android">
<TextView android:text="@string/select_set" android:id="@+id/text_select_set" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
<Spinner android:id="@+id/spinner_set" android:layout_width="wrap_content" android:layout_height="wrap_content"></Spinner>
<TextView android:text="@string/select_group" android:id="@+id/text_select_group" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
<Spinner android:id="@+id/spinner_group" android:layout_width="wrap_content" android:layout_height="wrap_content"></Spinner>
<Button android:text="@string/done" android:id="@+id/button_set_done" android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
</LinearLayout>