<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent">
	
	
	<LinearLayout
		android:layout_width="fill_parent" android:layout_height="fill_parent"
		android:orientation="vertical"
		>
		<TextView android:text="@string/name" android:id="@+id/TextView01" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
<TextView android:text="@+id/TextView02" android:id="@+id/exercise_name" android:layout_width="wrap_content" android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceLarge"
    android:paddingLeft="5dip"
    android:singleLine="true"
    ></TextView>
 
  	<LinearLayout
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		>
	 	<LinearLayout
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:orientation="vertical"
			>
		<TextView android:text="@string/type" android:id="@+id/TextView03" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
				<TextView android:text="Ex type" android:id="@+id/exercise_type" android:layout_width="wrap_content" android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceLarge"
    android:paddingLeft="5dip"
    android:singleLine="true"				
				></TextView>			
		</LinearLayout>
	 	<LinearLayout
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:orientation="vertical"
			    android:paddingLeft="30dip"
			>
					<TextView android:text="@string/max_reps" android:id="@+id/max_reps" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
					<TextView android:text="@string/max_weight" android:id="@+id/max_weight" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
					<TextView android:text="10 kg" android:id="@+id/exercise_max" android:layout_width="wrap_content" android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceLarge"
    android:paddingLeft="5dip"
    android:singleLine="true"				
				></TextView>
		</LinearLayout>
	</LinearLayout>	
	
			<TextView android:text="@string/group" android:id="@+id/TextView04" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
<TextView android:text="@+id/TextView02" android:id="@+id/exercise_group" android:layout_width="wrap_content" android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceLarge"
    android:paddingLeft="5dip"
    android:singleLine="true"
    ></TextView>
 
 			<TextView android:text="@string/description" android:id="@+id/TextView05" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
<TextView android:text="@+id/TextView02" android:id="@+id/exercise_desc" android:layout_width="wrap_content" android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceMedium"
    android:paddingLeft="5dip"
    ></TextView>
 
       <WebView android:id="@+id/exercise_image"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"/>      	   
	</LinearLayout>

</LinearLayout>
