<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
	android:id="@+id/LinearLayoutELL_row" 
	android:layout_width="fill_parent" 
	android:layout_height="fill_parent" 
	android:orientation="vertical" 
	xmlns:android="http://schemas.android.com/apk/res/android">
	<LinearLayout
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight="1"
    >
		<TextView android:text="@string/weight_row" android:id="@+id/log_entry_weight_text" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
		<TextView android:text="" android:id="@+id/log_entry_weight" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
		<TextView android:text="@string/kg" android:id="@+id/log_entry_weight_system" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
	</LinearLayout>
	<LinearLayout
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight="1"
    >
		<TextView android:text="@string/times_row" android:id="@+id/log_entry_times_text" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
		<TextView android:text="" android:id="@+id/log_entry_times" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
	</LinearLayout>
	
	<LinearLayout
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight="1"
    >
		<TextView android:text="@string/time_row" android:id="@+id/log_entry_time_text" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
		<TextView android:text="" android:id="@+id/log_entry_time" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
	</LinearLayout>
</LinearLayout>
