<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
	android:id="@+id/LinearLayoutELL_row" 
	android:layout_width="fill_parent" 
	android:layout_height="fill_parent" 
	android:orientation="vertical" 
	xmlns:android="http://schemas.android.com/apk/res/android">
	
	    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
	    android:id="@+id/exercise_name"
	    android:layout_width="fill_parent"
	    android:layout_height="?android:attr/listPreferredItemHeight"
	    android:textAppearance="?android:attr/textAppearanceLarge"
	    android:gravity="center_vertical"
	    android:paddingLeft="5dip"
	    android:singleLine="true"
		/>
		<TableLayout android:id="@+id/reps_table" android:layout_width="fill_parent" android:layout_height="wrap_content">
			<TableRow android:id="@+id/reps_table_header">
				<TextView android:text="@string/reps_table" android:id="@+id/reps_col"
					android:background="@color/tables_header"
					android:layout_weight="1.0"
					android:gravity="center" />
				<TextView android:text="x" android:id="@+id/x_col"
					android:background="@color/tables_header"
					android:gravity="center" android:paddingLeft="3dip"
					android:paddingRight="3dip" />
				<TextView android:text="@string/percentage_table" android:id="@+id/percentage_col"
					android:background="@color/tables_header"
					android:layout_weight="1.0" android:gravity="center" />
				<TextView android:text="@string/weight_table" android:id="@+id/weight_col"
					android:background="@color/tables_header"
					android:layout_weight="1.0" android:gravity="center" />
			</TableRow>
		</TableLayout>
		
</LinearLayout>
